--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "order-service",
+  "name": "Belajar CI CD",
   "version": "1.0.0",
-  "description": "",
+  "description": "Belajar membuat Docker di GHCR",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.6.0",
-    "body-parser": "^1.19.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.22"
-  }
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
+  "keywords": [
+    "node",
+    "express"
+  ],
+  "author": "Penulis Proyek Anda",
+  "license": "MIT"
 }
